ortho_config/tests/ui/subcommand_docs_unit_variant.rs
//! Test case exercising unit subcommand docs variants.

use ortho_config::OrthoConfigSubcommandDocs;

#[derive(OrthoConfigSubcommandDocs)]
enum Commands {
    Run,
}

fn main() {}
